# CMakeList.txt : CMake project for redstone.multichain, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (redstone.multichain "redstone.multichain.cpp" "redstone.multichain.h")

# TODO: Add tests and install targets if needed.
